@@ -4,6 +4,7 @@ Changes in 1.3.0
 Bugs fixed:
 - 1693530 Fixed problem with certain queries
 - 1693675 Fixed delivery of an indication can lock sfcb
+- 1697772 Fixed provider resolution can fail for associators
 
 Changes in 1.2.2
 ================
